madd: language config update

--- a/hoj-springboot/DataBackup/src/main/resources/application.yml
+++ b/hoj-springboot/DataBackup/src/main/resources/application.yml
@@ -11,3 +11,18 @@ mybatis-plus:
 service-url:
   name: hoj-judgeserver # 服务名
 
+# 需要更新的语言配置(更新language表), 必须填写oj、name、isSpj来唯一定位
+check-language-config:
+  list:
+    - oj: ME
+      name: PyPy3
+      isSpj: false
+      description: PyPy 3.9.17 (7.3.12)
+    - oj: ME
+      name: PyPy
+      isSpj: false
+      description: PyPy 2.7.18 (7.3.9)
+    - oj: ME
+      name: PHP
+      isSpj: false
+      description: PHP 7.2.24
