--- a/hoj-vue/package.json
+++ b/hoj-vue/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "serve": "vue-cli-service serve --openssl-legacy-provider",
+    "build": "vue-cli-service build --openssl-legacy-provider"
   },
   "dependencies": {
     "@iktakahiro/markdown-it-katex": "^4.0.1",
